--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.1",
+    "aws-amplify": "^5.0.19",
+    "aws-sdk": "^2.1334.0",
     "axios": "^1.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
