--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@mui/material": "^5.11.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -17,6 +16,7 @@
     "aws-amplify": "^5.0.19",
     "aws-sdk": "^2.1334.0",
     "axios": "^1.3.5",
+    "jest-css-modules-transform": "^4.4.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!(@mui|axios)/)\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -53,6 +53,15 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0"
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.5",
+    "@jest/globals": "^29.5.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.1",
+    "babel-jest": "^29.5.0",
+    "cross-env": "^7.0.3",
+    "ts-jest": "^29.1.0"
   }
 }
