More component tests
- Added PrivateRoute, SearchBox and ReviewCard passing tests
- Edited config to properly include test running for Jest and company

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!(@mui|axios)/)\"",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!(@mui|axios|@mui/material))/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
